# CurricularAnalytics.py

./: .gitignore  README.md  pyproject.toml  repr.jl  requirements.txt  test.csv
.github/workflows/: documentation.yml
curricularanalytics/: __init__.py  csv_utilities.py  data_handler.py  degree_plan_creation.py  graph_algs.py
curricularanalytics/types/: course.py  course_catalog.py  curriculum.py  data_types.py  degree_plan.py  degree_requirements.py  learning_outcome.py  simulation.py  student_record.py  transfer_articulation.py
docs/: api.rst  conf.py  contributing.rst  curricularanalytics.rst  curricularanalytics.types.rst  degreeplans.rst  graph-algs.rst  index.rst  install.rst  metrics.rst  modules.rst  persistence.rst  simulating.rst  types.rst  visualize.rst
docs/src/: index-example.py
examples/: Cornell_EE_curric.jl  Cornell_EE_curric.txt  UH_EE_curric.jl  UH_EE_curric.txt  UKY_EE_curric.jl  UKY_EE_curric.txt
examples/Introduction/: Example_C1.jl  Example_C1.txt  Example_C2.jl  Example_C2.txt  Example_C3.jl  Example_C3.txt  Example_C4.jl  Example_C4.txt  Example_ECE_UA.jl  Example_ECE_UA.txt
examples/Simulations/: CurriculumPool.jl  runSimulation.jl  runSimulation.txt
src/: CSVUtilities.py  CurricularAnalytics.py  DataHandler.py  DegreePlanAnalytics.py  DegreePlanCreation.py  GraphAlgs.py  __init__.py
src/DataTypes/: Course.py  CourseCatalog.py  Curriculum.py  DataTypes.py  DegreePlan.py  DegreeRequirements.py  LearningOutcome.py  Simulation.py  Student.py  StudentRecord.py  TransferArticulation.py
src/curricularanalytics/: CSVUtilities.py  CurricularAnalytics.py  DataHandler.py  DegreePlanAnalytics.py  DegreePlanCreation.py  GraphAlgs.py  __init__.py
src/curricularanalytics/DataTypes/: Course.py  CourseCatalog.py  Curriculum.py  DegreePlan.py  DegreeRequirements.py  LearningOutcome.py  Simulation.py  Student.py  StudentRecord.py  TransferArticulation.py
test/: test_CurricularAnalytics.py  test_DataHandler.py  test_GraphAlgs.py  test_degree_plan.py
tests/: __init__.py  big_unsatisfiable_curric.csv  demo.py  test_CurricularAnalytics.py  test_DataTypes.py  test_DegreePlanAnalytics.py  test_DegreePlanCreation.py  test_GraphAlgs.py  test_curricular_analytics.py  test_data_handler.py  test_data_types.py  test_degree_plan.py  test_degree_plan_analytics.py  test_degree_plan_creation.py  test_examples.py  test_graph_algs.py
typings/networkx/: __init__.pyi
typings/pandas/: __init__.pyi
