[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "curricularanalytics"
version = "0.1.0"
authors = [
  # PyPI only lists the first author's email, and I don't want Greg to receive
  # emails about a package he doesn't maintain
  { name = "Sean Yen", email = "seyen@ucsd.edu" },
  { name = "Greg Heileman", email = "gregheileman@gmail.com" },
  { name = "Hayden Free", email = "haydenwfree@gmail.com" },
  { name = "Orhan Abar", email = "orhan.abar@uky.edu" },
  { name = "Will Thompson", email = "wgthompson@uky.edu" },
]
description = "A toolbox for studying and analyzing academic program curricula."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "Operating System :: OS Independent",
]
dependencies = ["networkx >= 3.1", "pandas >= 2.0.1"]

[tool.setuptools]
packages = ["curricularanalytics", 'curricularanalytics.types']

[tool.setuptools.package-data]
"curricularanalytics" = ["py.typed"]
